<resources>
    <string name="app_name">BMI</string>
    <string name="button_1">scale BMI</string>
    <string name="button_2">about us</string>
    <string name="button_3">contact us</string>
    <string name="button_4">exit</string>
    <string name="contact_us.txt">
        The support team of Lollipop company is by your side in this section
        Respond to your problems, comments and criticisms.
        Please, in order to speed up and facilitate the response, your question in the form of a
        Send a message. Your message will be checked and answered as soon as possible will be given.
        Thank you for your patience.
    </string>
    <string name="number">+14046063522</string>
    <string name="id_telegram">NRAI0811</string>
    <string name="id_eitaa">NrAi0811</string>
    <string name="about_us.txt">
            The Lollipop Android development team is actually
            a producer of Android software. Lollipop company is
            a knowledge-based company. which is run by trainees.
            You can support our company and improve efficient software.
            Thanks for using our products.
    </string>
    <string name="version">version 13.2.1</string>
    <string name="name">Name</string>
    <string name="name_hint">Name</string>
    <string name="your_weight">Your weight</string>
    <string name="kg">kg</string>
    <string name="tall">Tall</string>
    <string name="cm">cm</string>
    <string name="mr">Mr</string>
    <string name="miss">Miss</string>
    <string name="your_gender">Your gender</string>
    <string name="scale">Scale</string>
</resources>