<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <Button
        android:id="@+id/btn_scale_bmi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:text="@string/button_1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/buttonstyle"/>
    <Button
        android:id="@+id/btn_about_us"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/button_2"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/buttonstyle"/>
    <Button
        android:id="@+id/btn_contact_us"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/button_3"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/buttonstyle"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/button_4"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:onClick="btn_click"
            android:background="@drawable/buttonstyle"/>
</LinearLayout>