<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmi_Activity"
    android:orientation="vertical"
    android:weightSum="8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_weight"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/kg"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/txt_tall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tall"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edt_tall"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/cm"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/your_gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingStart="35dp"
            android:paddingEnd="15dp">
            <RadioButton
                android:id="@+id/rdo_mr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdo_miss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/miss"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btn_scale"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/scale"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/buttonstyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/white_app"/>
    </LinearLayout>

</LinearLayout>